# machinery

./: .gitignore  CMakeLists.txt  README  build.py
Constructor/: CMakeLists.txt
Constructor/include/: BuildingBerth.h  HullConstructor.h  LibraryImpl.h  ObjectConstructor.h
Constructor/src/: BuildingBerth.cpp  ConstructionLibraryImpl.cpp  ConstructionLibraryImpl.h  ConstructionLibraryPrimitives.cpp  HullConstructor.cpp  Libraryimpl.cpp  MaterialLibraryImpl.cpp  MaterialLibraryImpl.h  MeshLibraryImpl.cpp  MeshLibraryImpl.h  MeshLibraryPrimitives.cpp  ObjectConstructor.cpp  ObjectLibraryImpl.cpp  ObjectLibraryImpl.h
Constructor/test/: BuildingBerthTest.cpp  ConstructorTest.cpp  MeshBuilderTest.cpp  MeshLibraryTest.cpp  ObjectLibraryTest.cpp
Overmind/: CMakeLists.txt
Overmind/generator/: script_generator.py  table.txt
Overmind/include/: OvermindImpl.h
Overmind/src/: OvermindImpl.cpp
Overmind/test/: OvermindTest.cpp
Overmind/test_scripts/: building.lua  registerObject.lua
Utils/: CMakeLists.txt
Utils/include/: QuadTree.h  RangeList.h
Utils/src/: ErrorHandler.cpp  Utils.cpp
Utils/test/: QuadTreeTest.cpp  RangeListTest.cpp  UtilsTest.cpp
cmake/: useful_functions.cmake
docs/: Constructor.docx  Gameconcept.docx
include/: Construction.h  Constructor.h  Engine.h  EngineInput.h  Library.h  LibraryPrimitives.h  MathBasics.h  NativeStructures.h  Object.h  Overmind.h  ResourceOverseer.h  Resources.h  common.h
include/internal/: ScriptBase.h  ScriptCommon.h
